--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ nav ul li a:hover::after{
     display:block;
     transition: transform 0.5s;
 }
-
+/* 
 .layer {
     width:100%;
     height: 0;
@@ -201,9 +201,9 @@ nav ul li a:hover::after{
 .layer h3{
     font-weight: 500;
     margin-bottom:20px;
-}
+} */
 
-.layer a{
+/* .layer a{
    margin-top: 20px;
    color:#ff004f;
    text-decoration: none;
@@ -214,8 +214,13 @@ nav ul li a:hover::after{
    height:60px;
    border-radius: 50%;
    text-align: center;
-}
+} */
 
+.layer{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
 .work :hover img{
    transform: scale(1.1);
 }
@@ -229,8 +234,8 @@ nav ul li a:hover::after{
     padding: 30px 0; 
 }
 
-
-.btn{
+/* 
+.seemore{
     display:block;
     margin:50px auto;
     width:fit-content;
@@ -239,13 +244,14 @@ nav ul li a:hover::after{
     border-radius: 6px;
     text-decoration: none;
     color:#fff;
-   transition: background 0.5s;
+ 
 
 }
 
-.btn :hover{
-    background: #ff004f;
-}
+.seemore:hover{
+    background-color: #ff004f;
+    cursor: pointer;
+} */
 
 /* contact */
 .contact-left{
