--- a/style.css
+++ b/style.css
@@ -190,6 +190,7 @@ nav ul li a:hover::after{
     width:50px;
     border:0px solid red;
     border-radius: 20%;
+    cursor: pointer;
 
 }
 .work img{
