--- a/style.css
+++ b/style.css
@@ -176,9 +176,9 @@ nav ul li a:hover::after{
    height:200%;
 }
 
-/* .sweet{
-   height:40%;
-} */
+.sweet{
+   height:420px;
+}
 
 /* .icons{
     height:600px;
