--- a/style.css
+++ b/style.css
@@ -446,12 +446,19 @@ nav .fa-solid{
         font-size:30px;
     }
 
+    nav{
+        position: relative;
+    }
+    .fa-bars{
+        position: absolute;
+    }
+
     nav .fa-solid{
         display: block;
         font-size: 25px;
        }
 
-       
+      
        
     nav ul{
         background: #ff004f;
@@ -545,10 +552,6 @@ nav .fa-solid{
         display: flex;
         flex-direction: column;
     }
-
-    .fa-bars{
-        right: 0px;
-      }
 }
 
 
@@ -559,6 +562,13 @@ nav .fa-solid{
       margin-right: 100px;
         border-radius: 100%;
         margin-top: 20px;
+    }
+
+    nav{
+        position: relative;
+    }
+    .fa-bars{
+        position: absolute;
     }
 
 
@@ -672,9 +682,7 @@ nav .fa-solid{
         flex-direction: column;
     }
 
-    .fa-bars{
-        right: 0px;
-      }
+    
 }
 
 
